## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.3 2004/05/10 16:05:49 rrt Exp $

EXTRA_DIST = README

noinst_LIBRARIES = libterm_ncurses.a
libterm_ncurses_a_SOURCES =			\
	ncurses_key.c				\
	ncurses_misc.c				\
	term_ncurses.c				\
	term_ncurses.h

INCLUDES = -I$(top_srcdir)/lib -I$(top_srcdir)/src
