# DejaGnu testsuite Makefile.am
#
# Copyright (c) 2008 Free Software Foundation, Inc.
# Copyright (c) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004 Sandro Sigala.
# Copyright (c) 2003, 2004, 2005, 2006, 2007, 2008 Reuben Thomas.
# Copyright (c) 2004 David Capello.
#
# This file is part of GNU Zile.
#
# GNU Zile is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Zile is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Zile; see the file COPYING.  If not, write to the
# Free Software Foundation, Fifth Floor, 51 Franklin Street, Boston,
# MA 02111-1301, USA.

AUTOMAKE_OPTIONS = dejagnu

EXTRA_DIST =					\
	config/default.exp			\
	lib/zile.exp				\
	zile.test/make-interactive-test		\
	zile.test/backward_char.exp		\
	zile.test/backward_char.output		\
	zile.test/backward_delete_char.exp	\
	zile.test/backward_delete_char.output	\
	zile.test/backward_kill_word.exp	\
	zile.test/backward_kill_word.output	\
	zile.test/backward_paragraph.exp	\
	zile.test/backward_paragraph.output	\
	zile.test/backward_sexp.exp		\
	zile.test/backward_sexp.output		\
	zile.test/backward_word.exp		\
	zile.test/backward_word.output		\
	zile.test/beginning_of_buffer.exp	\
	zile.test/beginning_of_buffer.output	\
	zile.test/beginning_of_line.exp		\
	zile.test/beginning_of_line.output	\
	zile.test/call_last_kbd_macro.exp	\
	zile.test/call_last_kbd_macro.output	\
	zile.test/capitalize_word.exp		\
	zile.test/capitalize_word.output	\
	zile.test/delete_char.exp		\
	zile.test/delete_char.output		\
	zile.test/end_of_line.exp		\
	zile.test/end_of_line.output		\
	zile.test/forward_char.exp		\
	zile.test/forward_char.output		\
	zile.test/insert_char.exp		\
	zile.test/insert_char.output		\
	zile.test/zile_test.input
